<resources>
    <string name="app_name">Caculator</string>
    <string name="c">C</string>
    <string name="ce">CE</string>
    <string name="bs">BS</string>
    <string name="div">/</string>
    <string name="btn7">7</string>
    <string name="btn4">4</string>
    <string name="btn_mul">x</string>
    <string name="btn5">5</string>
    <string name="btn8">8</string>
    <string name="btn9">9</string>
    <string name="btnnoname">+/-</string>
    <string name="btn1">1</string>
    <string name="btn6">6</string>
    <string name="btn_sub">-</string>
    <string name="btn2">2</string>
    <string name="btn3">3</string>
    <string name="btn_add">+</string>
    <string name="btn_result">=</string>
    <string name="btn_dot">.</string>
    <string name="btn0">0</string>
</resources>